Changed to java 17